tests/parser/invalid/012-dangling-else.man
def main()
    foo()
    else
        bar()
    end
end
